--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,9 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "kavenegar/php": "^1.2",
-        "laravel-validation-rules/credit-card": "^1.8",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "propaganistas/laravel-phone": "^5.0"
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
